--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:compileSdkVersion="28" android:compileSdkVersionCodename="9" package="com.example.overlay.template" platformBuildVersionCode="28" platformBuildVersionName="9">
-    <uses-sdk android:minSdkVersion="28" android:targetSdkVersion="28"/>
-    <overlay android:isStatic="true" android:priority="1000" android:targetPackage="com.example"/>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:compileSdkVersion="34" android:compileSdkVersionCodename="14" package="com.android.internal.display.cutout.emulation.test" platformBuildVersionCode="34" platformBuildVersionName="14">
+    <uses-sdk android:minSdkVersion="34" android:targetSdkVersion="34"/>
+    <overlay android:category="com.android.internal.display_cutout_emulation" android:priority="1" android:targetPackage="android"/>
+    <application android:extractNativeLibs="true" android:hasCode="false" android:label="@string/display_cutout_emulation_overlay"/>
 </manifest>
